maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:56: error: '=' expected but ';' found.
  int[] bagglePos = new int[2]
^JediEscaper:56: error: identifier expected but ']' found.
  int[] bagglePos = new int[2]
      ^JediEscaper:58: error: ']' expected but ';' found.
  bagglePos = foundBaggle()
^